--- a/register/templates/register/projecttype_list.html
+++ b/register/templates/register/projecttype_list.html
@@ -11,9 +11,13 @@
         <table class="table table-hover">
             <tr>
                 <th scope="col">Project Type</th>
+                <th scope="col">Description</th>
             </tr>
             {% for item in object_list %}
-            <tr><td><a href="{% url "register:projecttype_detail" item.slug %}">{{ item }}</a></td></tr>
+            <tr>
+                <td><a href="{% url "register:projecttype_detail" item.slug %}">{{ item }}</a></td>
+                <td>{{ item.description }}</td>
+            </tr>
             {% endfor %}
 
         </table>
