--- a/register/templates/register/strategicalignment_create.html
+++ b/register/templates/register/strategicalignment_create.html
@@ -15,11 +15,11 @@
 
         <div class="col-sm-4">
             <div class="card border-light mb-3" style="width: 18rem;">
-                <div class="card-header">Current Strategic Alignments in system</div>
+                <div class="card-header">Current Project Stages in system</div>
                 <div class="card-body">
                     {% for item in existing_objects %}
                     <ul id="current-datamap-list" class="list-group">
-                        <li class="list-group-item card-text"><a href="{%  url 'register:strategicalignmente_detail' item.slug %}">{{ item }}</a></li>
+                        <li class="list-group-item card-text"><a href="{%  url 'register:strategicalignment_detail' item.slug %}">{{ item }}</a></li>
                     </ul>
                     {% endfor %}
                 </div> 
