added max_length data_type and required fields to datamapline

--- a/datamap/templates/datamap/datamap_detail.html
+++ b/datamap/templates/datamap/datamap_detail.html
@@ -10,6 +10,9 @@
             <thead>
                 <tr>
                     <th scope="col">Key</td>
+                    <th rcope="col" class="col-sm-1">Data Type</td>
+                    <th rcope="col" class="col-sm-1">Max Length</td>
+                    <th rcope="col" class="col-sm-1">Required</td>
                     <th rcope="col" class="col-sm-2">Sheet</td>
                     <th scope="col" class="col-sm-1">Cell Reference</td>
                     <th scope="col" class="col-sm-2">Action</td>
@@ -19,6 +22,9 @@
                 {% for line in dm_lines %}
                 <tr>
                     <td><a href="{% url 'datamaps:datamapline_update' line.id %}">{{ line.key }}</a></td>
+                    <td>{{ line.data_type }}</td>
+                    <td>{{ line.max_length }}</td>
+                    <td>{{ line.required }}</td>
                     <td>{{ line.sheet }}</td>
                     <td>{{ line.cell_ref }}</td>
                     <td>
