added Projects to base template dropdown

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -47,6 +47,7 @@
                 Project Register
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'register:project_list' %}">Projects</a>
                     <a class="dropdown-item" href="{% url 'register:projecttype_list' %}">Project Types</a>
                     <a class="dropdown-item" href="{% url 'register:tier_list' %}">Tiers</a>
                     <a class="dropdown-item" href="{% url 'register:projectstage_list' %}">Project Stages</a>
