--- a/datamap/templates/datamap/datamap_list.html
+++ b/datamap/templates/datamap/datamap_list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         
-        <h3>Datamaps</h3>
+        <h3 id="show-datamap-table">Datamaps</h3>
         <table class="table table-hover">
             <thead>
                 <th scope="col" class="col-sm-4">Datamap name</th>
@@ -16,7 +16,7 @@
             {% if object_list %}
                 {% for datamap in object_list %}
                 <tr>
-                    <td><a href="{% url 'datamaps:datamap_detail' datamap.slug %}">{{ datamap.name }}</a></td>
+                    <td id="datamap-title"><a href="{% url 'datamaps:datamap_detail' datamap.slug %}">{{ datamap.name }}</a></td>
                     <td> {{ datamap.tier }}</a></td>
                     <td> {{ datamap.active }}</a></td>
                     <td> <a class="btn btn-danger" href="{% url 'datamaps:datamap_delete' datamap.slug %}">DELETE</a></td>
