--- a/datamap/templates/datamap/datamap_detail.html
+++ b/datamap/templates/datamap/datamap_detail.html
@@ -37,10 +37,10 @@
             </tbody>
         </table>
         <div class="buttonHolder">
-            <a class="btn btn-primary" href="{% url 'datamaps:datamapline-create' dm.slug %}">Add line to this datamap</a>
-            <a class="btn btn-primary" href="{% url 'datamaps:datamap_update' dm.slug %}">Edit</a>
-            <a class="btn btn-primary" href="{% url 'datamaps:uploaddatamap' dm.slug %}">Upload CSV</a>
-            <a class="btn btn-danger" href="{% url 'datamaps:datamap_delete' dm.slug %}">Delete this datamap</a>
+            <a class="btn btn-primary" id="add-line-to-datamap-button"  href="{% url 'datamaps:datamapline-create' dm.slug %}">Add line to this datamap</a>
+            <a class="btn btn-primary" id="edit-datamap-button" href="{% url 'datamaps:datamap_update' dm.slug %}">Edit</a>
+            <a class="btn btn-primary" id="upload-csv-button" href="{% url 'datamaps:uploaddatamap' dm.slug %}">Upload CSV</a>
+            <a class="btn btn-danger" id="delete-datamap-button" href="{% url 'datamaps:datamap_delete' dm.slug %}">Delete this datamap</a>
         </div>
     </div>
 </div>
