--- a/templates/templates/templates/template_detail.html
+++ b/templates/templates/templates/template_detail.html
@@ -6,17 +6,18 @@
 
 <div class="container">
     
-    <h3>Tier: {{ object.name }}</h3>
+    <h3>Template: {{ object.name }}</h3>
     <div class="container">
         {% if object.description %}
         <p class="w-75 p-3 border">{{ object.description }}</p>
         {% else %}
-        <p>There is no description for this Tier.</p>
+        <p>There is no description for this Template.</p>
         {% endif %}
+        <p>Source file: {{ object.source_file }}</p>
     </div>
     <div class="buttonHolder">
-        <a class="btn btn-primary" href="{% url 'register:tier_update' object.slug %}">Edit</a>
-        <a class="btn btn-danger" href="{% url 'register:tier_delete' object.slug %}">Delete</a>
+        <a class="btn btn-primary" href="{% url 'templates:template_update' object.slug %}">Edit</a>
+        <a class="btn btn-danger" href="{% url 'templates:template_delete' object.slug %}">Delete</a>
     </div>
 
 </div>
