refactored url names to better work with templates namespace

--- a/templates/templates/templates/template_confirm_delete.html
+++ b/templates/templates/templates/template_confirm_delete.html
@@ -10,7 +10,7 @@
             Are you sure you want to delete "{{ object }}"?
             <div class="buttonHolder p-1">
                 <button class="btn btn-danger" type="submit" value="Submit" name="submit" id="submit-button"/>Yes</button>
-                <a href="{% url 'templates:template_list' %}" class="btn btn-primary">Cancel</a> 
+                <a href="{% url 'templates:list' %}" class="btn btn-primary">Cancel</a> 
             </div>
         </form>
     </div>    
