--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -37,6 +37,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'datamaps:datamap_list' %}">Datamaps</a>
+                    <a class="dropdown-item" href="{% url 'templates:list' %}">Templates</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
