--- a/templates/templates/templates/template_create.html
+++ b/templates/templates/templates/template_create.html
@@ -9,7 +9,7 @@
     {% if messages %}
     <ul>
         {% for message in messages %}
-        <div class="alert alert-dismissible alert-danger">
+        <div id="bad-file-upload-id" class="alert alert-dismissible alert-danger">
             {{ message }}
         </div>
         {% endfor %}
