--- a/templates/templates/templates/template_detail.html
+++ b/templates/templates/templates/template_detail.html
@@ -5,20 +5,83 @@
 {% block content %}
 
 <div class="container">
-    
-    <h3>Template: {{ object.name }}</h3>
-    <div class="container">
-        {% if object.description %}
-        <p class="w-75 p-3 border">{{ object.description }}</p>
-        {% else %}
-        <p>There is no description for this Template.</p>
-        {% endif %}
-        <p>Source file: {{ object.source_file }}</p>
+
+    <div class="container py-5">
+        <div class="card text-white bg-primary p-6">
+            <div class="card-body">
+                <h3 class="card-title">
+                    <strong>Template Name:</strong> {{ object.name }} 
+                </h3>
+                <table class="table table-hover">
+                    <tr>
+                        <td class="col-2"><strong>File Name:</strong></td> <td>FILENAME HERE</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Source File:</strong></td> <td>{{ object.source_file }}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Created:</strong></td> <td>CREATED DATE</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Description:</strong></td> <td>{{ object.description }}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Uploaded:</strong></td> <td>UPLOADED DATE</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
-    <div class="buttonHolder">
-        <a class="btn btn-primary" href="{% url 'templates:update' object.slug %}">Edit</a>
-        <a class="btn btn-danger" href="{% url 'templates:delete' object.slug %}">Delete</a>
+
+    <div class="container py-3">
+    <h4>Sheets</h4>
+
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link" href="#sheet-1" data-toggle="tab">Sheet 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#sheet-2" data-toggle="tab">Sheet 2</a>
+            </li>
+        </ul>
+
+        <div id="myTabContent" class="tab-content">
+            <div class="tab-pane fade active show" id="sheet-1">
+                <div class="container">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">Cell</th>
+                                <th scope="col">Value</th>
+                                <th scope="col">Background Colour</th>
+                                <th scope="col">Font Colour</th>
+                                <th scope="col">Type</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="table-active">
+                                <td>A1</td>
+                                <td>Nothing in here</td>
+                                <td>Nothing in here</td>
+                                <td>Nothing in here</td>
+                                <td>Nothing in here</td>
+                            </tr>
+                        </tbody>
+
+                    </table> 
+                </div>
+            </div>
+            <div class="tab-pane fade" id="sheet-2">
+                <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
+            </div>
+        </div>
     </div>
+
+
+<div class="buttonHolder">
+    <a class="btn btn-primary" href="{% url 'templates:update' object.slug %}">Edit</a>
+    <a class="btn btn-danger" href="{% url 'templates:delete' object.slug %}">Delete</a>
+</div>
 
 </div>
 
