--- a/datamap/templates/datamap/datamap_detail.html
+++ b/datamap/templates/datamap/datamap_detail.html
@@ -9,13 +9,13 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">Key</td>
-                    <th rcope="col" class="col-sm-1">Data Type</td>
-                    <th rcope="col" class="col-sm-1">Max Length</td>
-                    <th rcope="col" class="col-sm-1">Required</td>
-                    <th rcope="col" class="col-sm-2">Sheet</td>
-                    <th scope="col" class="col-sm-1">Cell Reference</td>
-                    <th scope="col" class="col-sm-2">Action</td>
+                    <th scope="col">Key</th>
+                    <th scope="col" class="col-sm-1">Data Type</th>
+                    <th scope="col" class="col-sm-1">Max Length</th>
+                    <th scope="col" class="col-sm-1">Required</th>
+                    <th scope="col" class="col-sm-2">Sheet</th>
+                    <th scope="col" class="col-sm-1">Cell Reference</th>
+                    <th scope="col" class="col-sm-2">Action</th>
                 </tr>
             </thead>
             <tbody>
