--- a/datamap/templates/datamap/datamap_list.html
+++ b/datamap/templates/datamap/datamap_list.html
@@ -8,17 +8,19 @@
         <h3 id="show-datamap-table">Datamaps</h3>
         <table class="table table-hover">
             <thead>
-                <th scope="col" class="col-sm-4">Datamap name</th>
-                <th scope="col" class="col-sm-2">Tier</th>
-                <th scope="col" class="col-sm-2">Active</th>
-                <th scope="col" class="col-sm-1">Action</th>
+                <tr>
+                    <th scope="col" class="col-sm-4">Datamap name</th>
+                    <th scope="col" class="col-sm-2">Tier</th>
+                    <th scope="col" class="col-sm-2">Active</th>
+                    <th scope="col" class="col-sm-1">Action</th>
+                </tr>
             </thead>
             {% if object_list %}
                 {% for datamap in object_list %}
                 <tr>
                     <td id="datamap-title"><a href="{% url 'datamaps:datamap_detail' datamap.slug %}">{{ datamap.name }}</a></td>
-                    <td> {{ datamap.tier }}</a></td>
-                    <td> {{ datamap.active }}</a></td>
+                    <td> {{ datamap.tier }} </td>
+                    <td> {{ datamap.active }} </td>
                     <td> <a class="btn btn-danger" href="{% url 'datamaps:datamap_delete' datamap.slug %}">DELETE</a></td>
                 </tr>
                 {% endfor %}
