--- a/datamap/templates/datamap/upload_datamap.html
+++ b/datamap/templates/datamap/upload_datamap.html
@@ -27,7 +27,7 @@
         {% if messages %}
         <ul>
             {% for message in messages %}
-            <div class="alert alert-dismissible alert-danger">
+            <div id="message-test" class="alert alert-dismissible alert-danger">
                 {{ message }}
             </div>
             {% endfor %}
