tests passing but no solution to removing existing dmls yet

--- a/datamap/templates/datamap/datamap_detail.html
+++ b/datamap/templates/datamap/datamap_detail.html
@@ -21,7 +21,7 @@
             <tbody>
                 {% for line in dm_lines %}
                 <tr>
-                    <td><a href="{% url 'datamaps:datamapline_update' line.id %}">{{ line.key }}</a></td>
+                    <td><a href="{% url 'datamaps:datamapline_update' line.id %}" id="key-cell">{{ line.key }}</a></td>
                     <td>{{ line.data_type }}</td>
                     <td>{{ line.max_length }}</td>
                     <td>{{ line.required }}</td>
