--- a/datamap/templates/datamap/datamap_detail.html
+++ b/datamap/templates/datamap/datamap_detail.html
@@ -4,11 +4,24 @@
 
 {% block content %}
 <div class="container">
-    
+    <div class="container">
+        <div class="row">
+            {% if messages %}
+            <ul>
+                {% for message in messages %}
+                <div id="message-test" class="alert alert-dismissible alert-danger">
+                    {{ message }}
+                </div>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+    </div>
+
         <h3 id="show-datamap-table">Datamap: {{ dm_name }} </h3>
         <table class="table table-hover">
             <thead>
-                <tr>
+                <tr id="datamap-detail-header-row">
                     <th scope="col">Key</th>
                     <th scope="col" class="col-sm-1">Data Type</th>
                     <th scope="col" class="col-sm-1">Max Length</th>
