--- a/datamap/templates/datamap/datamap_create.html
+++ b/datamap/templates/datamap/datamap_create.html
@@ -15,10 +15,10 @@
         <div class="col-sm-6">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Current datamaps in system</h5>
+                    <h5 class="card-title" id="card-title">Current datamaps in system</h5>
                     {% for item in existing_objects %}
                     <ul id="current-datamap-list" class="list-group">
-                        <li class="list-group-item card-text"><a href="{%  url 'datamaps:datamap_detail' item.slug %}">{{ item.name }}</a></li>
+                        <li class="list-group-item card-text" id="datamap-in-system"><a href="{%  url 'datamaps:datamap_detail' item.slug %}">{{ item.name }}</a></li>
                     </ul>
                     {% endfor %}
                 </div> 
