--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -72,18 +72,18 @@
                         </li>
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
-                            <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
+                            <a class="nav-link" href="{% url 'logout' %}">{% trans "Sign Out" %}</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
                             <a id="sign-up-link" class="nav-link"
-                               href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
+                               href="#">{% trans "Sign Up" %}</a>
                         </li>
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
                             <a id="log-in-link" class="nav-link"
-                               href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
+                               href="{% url 'login' %}">{% trans "Sign In" %}</a>
                         </li>
                     {% endif %}
                 </ul>
