--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -14,7 +14,7 @@
 {% block bootstrap-navbar %}
 
     <div class="m-b-1">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-transparent">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -57,8 +57,11 @@
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                     </li>
+                </ul>
 
-                    <li class="nav-item active">
+                <ul class="nav justify-content-end">
+
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'dashboard' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
@@ -68,7 +71,7 @@
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
                             {#<a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>#}
-                            <a class="nav-link" href="{% url 'dashboard' %}">{% trans "My Profile" %}</a>
+                            <a class="nav-link" href="#">{{ user }}</a>
                         </li>
                         <li class="nav-item">
                             {# URL provided by django-allauth/account/urls.py #}
