groping forward with the web pages for return data...

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -35,7 +35,7 @@
                             <a class="dropdown-item" href="{% url 'templates:list' %}">Templates</a>
                             <a class="dropdown-item" href="{% url 'excelparser:process_populated' %}">Process populated
                                 template</a>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="{% url 'returns:returns_list' %}">Returns</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
