--- a/returns/templates/returns/returnitem_list.html
+++ b/returns/templates/returns/returnitem_list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         
-        <h3 id="show-datamap-table">Return Items</h3>
+        <h3 id="show-datamap-table">{{ return }}</h3>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -32,6 +32,9 @@
                 <td>There are no Return Items.</td>
             {% endif %}
         </table>
+        <div class="container">
+            <a class="btn btn-primary" href="{% url 'excelparser:process_populated' return.id %}">Upload a populated template</a>
+        </div>
     </div>
 
 {% endblock %}
