--- a/returns/templates/returns/returnitem_list.html
+++ b/returns/templates/returns/returnitem_list.html
@@ -9,12 +9,12 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col" class="col-sm-4">Return Item</th>
-                    <th scope="col" class="col-sm-4">Sheet</th>
+                    <th scope="col" class="col-sm-3">Return Item</th>
+                    <th scope="col" class="col-sm-1">Sheet</th>
                     <th scope="col" class="col-sm-4">Text Value</th>
-                    <th scope="col" class="col-sm-4">Integer Value</th>
-                    <th scope="col" class="col-sm-4">Float Value</th>
-                    <th scope="col" class="col-sm-4">Date Value</th>
+                    <th scope="col" class="col-sm-1">Integer Value</th>
+                    <th scope="col" class="col-sm-1">Float Value</th>
+                    <th scope="col" class="col-sm-2">Date Value</th>
                 </tr>
             </thead>
             {% if object_list %}
@@ -22,10 +22,10 @@
                 <tr>
                     <td>{{ returnitem.datamapline.key }}</td>
                     <td>{{ returnitem.datamapline.sheet }}</td>
-                    <td>{{ returnitem.value_str }}</td>
-                    <td>{{ returnitem.value_int }}</td>
-                    <td>{{ returnitem.value_float }}</td>
-                    <td>{{ returnitem.value_date }}</td>
+                    <td>{{ returnitem.value_str|default:"-" }}</td>
+                    <td>{{ returnitem.value_int|default:"-"  }}</td>
+                    <td>{{ returnitem.value_float|default:"-"  }}</td>
+                    <td>{{ returnitem.value_date|date:"j M Y"|default:"-"  }}</td>
                 </tr>
                 {% endfor %}
             {% else %}
