--- a/returns/templates/returns/returnitem_list.html
+++ b/returns/templates/returns/returnitem_list.html
@@ -4,9 +4,8 @@
 
 {% block content %}
     <div class="container">
-        
         <h3 id="show-datamap-table">{{ return }}</h3>
-        <table class="table table-hover">
+        <table class="table table-sm table-striped table-bordered">
             <thead>
                 <tr>
                     <th scope="col" class="col-sm-3">Return Item</th>
