better HTML formatting on returns list page

--- a/returns/templates/returns/returns_list.html
+++ b/returns/templates/returns/returns_list.html
@@ -4,32 +4,24 @@
 
 {% block content %}
     <div class="container">
-        
+
         <h3 id="show-datamap-table">Returns</h3>
 
         {% if valid_fqs %}
             {% for fq in valid_fqs %}
-                <p>{{ fq }}</p>
+                <h4>{{ fq }}</h4>
+                {% for r in fq.return_financial_quarters.all %}
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <a href="{% url "returns:return_data" r.pk %}">{{ r }}</a><span class="badge badge-primary badge-pill">Return Items: 10</span>
+                        </li>
+                    </ul>
+                {% endfor %}
             {% endfor %}
+        {% else %}
+            <td>There are no Return Items.</td>
         {% endif %}
 
-
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col" class="col-sm-4">Return Item</th>
-                </tr>
-            </thead>
-            {% if object_list %}
-                {% for return in object_list %}
-                <tr>
-                    <td><a href="{% url "returns:return_data" return.pk %}">{{ return }}</a></td>
-                </tr>
-                {% endfor %}
-            {% else %}
-                <td>There are no Return Items.</td>
-            {% endif %}
-        </table>
         <div class="container">
             <a class="btn btn-primary" href="{% url 'returns:return_create' %}">Create a new Return</a>
         </div>
