numerous fixes to creating a return object

--- a/returns/templates/returns/returns_list.html
+++ b/returns/templates/returns/returns_list.html
@@ -19,7 +19,9 @@
                 {% endfor %}
             {% endfor %}
         {% else %}
-            <td>There are no Return Items.</td>
+            <div class="container">
+                <p class="text-muted">There are no Return Items.</p>
+            </div>
         {% endif %}
 
         <div class="container">
