removed cache for now - and erroneous truncate css

--- a/returns/templates/returns/returnitem_list.html
+++ b/returns/templates/returns/returnitem_list.html
@@ -21,7 +21,7 @@
                 <tr>
                     <td class="font-weight-bold">{{ obj.datamapline.key }}</td>
                     <td>{{ obj.datamapline.sheet }}</td>
-                    <td class="text-truncate">{{ obj.value_str|default:"-" }}</td>
+                    <td>{{ obj.value_str|default:"-" }}</td>
                     <td>{{ obj.value_int|default:"-"  }}</td>
                     <td>{{ obj.value_float|default:"-"  }}</td>
                     <td>{{ obj.value_date|date:"j M Y"|default:"-"  }}</td>
