fixes and slightly better looking template for list of returns

--- a/returns/templates/returns/returns_list.html
+++ b/returns/templates/returns/returns_list.html
@@ -3,30 +3,43 @@
 {% block title %}Return Items{% endblock %}
 
 {% block content %}
+
     <div class="container">
 
-        <h3 id="show-datamap-table">Returns</h3>
+        <h2 id="show-datamap-table">Returns</h2>
 
         {% if valid_fqs %}
             {% for fq in valid_fqs %}
-                <h4>{{ fq }}</h4>
-                {% for r in fq.return_financial_quarters.all %}
-                    <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a href="{% url "returns:return_data" r.pk %}">{{ r }}</a><span class="badge badge-primary badge-pill">Return Items: 10</span>
-                        </li>
-                    </ul>
-                {% endfor %}
-            {% endfor %}
-        {% else %}
-            <div class="container">
-                <p class="text-muted">There are no Return Items.</p>
-            </div>
-        {% endif %}
+                <div class="card w-75">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <h4 class="card-title">{{ fq }}</h4>
 
-        <div class="container">
-            <a class="btn btn-primary" href="{% url 'returns:return_create' %}">Create a new Return</a>
-        </div>
-    </div>
+                            <!--<div class="btn btn-warning align-self-end">-->
+                            <!--<a href="#">Download Master</a>-->
+                            <!--</div>-->
+                            {% for r in fq.return_financial_quarters.all %}
+                                <ul class="list-group">
+                                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                                        <a href="{% url "returns:return_data" r.pk %}">{{ r }}</a><span class="badge badge-primary badge-pill">Data points: {{ r.return_returnitems.count }}</span>
+                                    </li>
+                            {% endfor %}
+                            <li class="list-group-item align-self-end">
+                                <a href="#" class="btn btn-muted">Download Master</a>
+                            </li>
+                            </ul>
+                        {% endfor %}
+                        </div>
+                    {% else %}
+                        <div class="container">
+                            <p class="text-muted">There are no Return Items.</p>
+                        </div>
+                    {% endif %}
+                    </div>
+                    </div>
 
-{% endblock %}
+                    <div class="container">
+                        <a class="btn btn-primary" href="{% url 'returns:return_create' %}">Create a new Return</a>
+                    </div>
+
+            {% endblock %}
