tweak to sizing of returns list card

--- a/returns/templates/returns/returns_list.html
+++ b/returns/templates/returns/returns_list.html
@@ -13,7 +13,7 @@
         {% if valid_fqs %}
             {% for fq in valid_fqs %}
 
-                <div class="card border-primary mb-3" style="width: 48rem;">
+                <div class="card border-primary mb-5">
                     <div class="card-body">
 
                 <div class"card-title">
