--- a/returns/templates/returns/returns_list.html
+++ b/returns/templates/returns/returns_list.html
@@ -42,6 +42,7 @@
 
         <div class="container">
             <a class="btn btn-primary" href="{% url 'returns:return_create' %}">Create a new Return</a>
+            <a class="btn btn-primary" href="{% url 'returns:return_batch_create' %}">Create new Returns (batch upload)</a>
         </div>
 
 {% endblock %}
